fixed line wrapping issue with flex

--- a/app/assets/scss/base/_media-queries.scss
+++ b/app/assets/scss/base/_media-queries.scss
@@ -9,3 +9,9 @@
     @content;
   }
 }
+
+@mixin largeTablet {
+  @media (max-width: 1000px){
+    @content;
+  }
+}
