--- a/app/assets/scss/modules/_portfolio.scss
+++ b/app/assets/scss/modules/_portfolio.scss
@@ -1,6 +1,7 @@
 .wrapper {
   display: flex;
   justify-content: space-evenly;
+  flex-wrap: wrap;
   margin-top: 20px;
 
   @include mobile {
@@ -11,7 +12,7 @@
     // width: 398px;
     // height: 288px;
     margin: 20px 20px 0 20px;
-    overflow: hidden;
+    // overflow: hidden;
 
     @include tablet {
       // width: 250px;
